--- a/paper-wallet/index.html
+++ b/paper-wallet/index.html
@@ -119,8 +119,12 @@
     >.
   </p>
 
+  <!-- This is a BCH wallet library maintained by PSFoundation.cash -->
   <script src="https://unpkg.com/minimal-slp-wallet"></script>
+
+  <!-- This library is used to generate the QR codes -->
   <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
       try {
