Pointing out the page refresh makes a new wallet

--- a/paper-wallet/index.html
+++ b/paper-wallet/index.html
@@ -23,6 +23,12 @@
       BCH wallets, and one for token-aware wallets that use <i>simpleledger</i>
       address format.
     </p>
+    <p>
+      This app generates a new wallet every time it loads. To create a new
+      wallet, just refresh the page.
+    </p>
+
+    <p></p>
   </body>
 
   <div style="padding: 20px;"></div>
