Switching from api.fullstack.cash to free-bch.fullstack.cash

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -38,7 +38,10 @@
       try {
         console.log("hello world");
 
-        const wallet = new SlpWallet(undefined, { noUpdate: true });
+        const wallet = new SlpWallet(undefined, {
+          noUpdate: true,
+          interface: "consumer-api"
+        });
         await wallet.walletInfoPromise;
         console.log("wallet info: ", wallet.walletInfo);
         // console.log("BchMessage: ", BchMessage);
