Commenting out screen spam

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -43,7 +43,7 @@
           interface: "consumer-api"
         });
         await wallet.walletInfoPromise;
-        console.log("wallet info: ", wallet.walletInfo);
+        // console.log("wallet info: ", wallet.walletInfo);
         // console.log("BchMessage: ", BchMessage);
 
         const bchMessage = new BchMessage({ wallet });
