Fixing broken app by freezing minimal-slp-wallet version

--- a/paper-wallet/index.html
+++ b/paper-wallet/index.html
@@ -126,7 +126,7 @@
   </p>
 
   <!-- This is a BCH wallet library maintained by PSFoundation.cash -->
-  <script src="https://unpkg.com/minimal-slp-wallet"></script>
+  <script src="https://unpkg.com/minimal-slp-wallet@5.2.1"></script>
 
   <!-- This library is used to generate the QR codes -->
   <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
